--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 __pycache__/
 *.py[cod]
 *$py.class
-.cursor/*
 
 # C extensions
 *.so
@@ -280,5 +279,5 @@ alerts/
 .development/
 .local/ 
 
-
+.cursor/
 scripts/setup_ssh_key.py
